--- a/index.html
+++ b/index.html
@@ -57,7 +57,18 @@
         <button>Learn more</button>
     </section>
 
-    <section class="Map"></section>
+    <section class="Map">
+        <div>
+            <h2>We are almost everywhere</h2>
+            <p>Now the races of these two have been for some ages utterly exti</p>
+        <h3>Partners</h3>
+        <ul>
+            <li><img src="" alt="Dropbox Logo"></li>
+            <li><img src="" alt="Evernote Logo"></li>
+        </ul>
+        </div>
+        <img src="" alt="World Map">
+    </section>
 
     <section class="Screens"></section>
 
