--- a/index.html
+++ b/index.html
@@ -70,7 +70,18 @@
         <img src="" alt="World Map">
     </section>
 
-    <section class="Screens"></section>
+    <section class="Screens">
+        <h2>Beautiful Interface</h2>
+        <img src="" alt="line">
+        <p>Landing Screen</p>
+        <div class="Screens">
+            <img src="" alt="Screen1">
+            <img src="" alt="Screen2">
+            <img src="" alt="Screen3">
+            <img src="" alt="Screen4">
+            <img src="" alt="Screen5">
+        </div>
+    </section>
 
     <section class="Ready"></section>
 
