--- a/index.html
+++ b/index.html
@@ -83,7 +83,17 @@
         </div>
     </section>
 
-    <section class="Ready"></section>
+    <section class="Ready">
+        <h4>NewProvidence</h4>
+        <h2>Get it to your smartphone </h2>
+        <form class="form-wrapper cf">
+            <input type="email" placeholder="denis@getcraftwork.com" required>
+            <button>Send Invite <img src="" alt="arrow"></button>
+        </form>
+        <p>or Download From</p>
+        <button><img src="" alt="Apple Logo">Download on the <span>App Store</span>
+        </button>
+    </section>
 
     <section class="Customers"></section>
 
